--- a/exp/exp_1.ipynb
+++ b/exp/exp_1.ipynb
@@ -520,8 +520,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "c18e8ea0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('D:/Projects/MLE_Agent/exp/flower_dataset.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54b1c6fb",
    "metadata": {},
    "outputs": [],
    "source": []
